# mayonet

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mayonet/: drivers.py  regular_expressions.py
